fixed link text overflow in menu

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -27,7 +27,7 @@ h1.entry-header{
   vertical-align: baseline;
   }
 
-p{font-size:14px;}
+p{font-size:12px;}
 
 div#wrapper {
     margin: 0 auto;
@@ -66,7 +66,7 @@ div#login a {
 #menu ul li ul{position: absolute; top:25px; left:0; display: none; background-color: #000; width:150px; z-index:99; margin-top:14px;}
 #menu ul li ul li ul{margin-top:0px;}
 #menu ul li ul li ul li{background:#333; border:none red 1px;width:300px;}  
-#menu ul li ul li ul li a{background:#666; border:none green 1px; } 
+#menu ul li ul li ul li a{background:#666; border:none green 1px; overflow:hidden; text-overflow:ellipsis;} 
 #menu ul li:hover > ul{display: block;}
 #menu ul li ul li a{white-space: nowrap; line-height:30px;}
 #menu ul li ul li ul{position: absolute; top:0; left:145px; display: none; background-color: #000; width:150px;}
